profile logo added

--- a/maryprofile/src/Header.css
+++ b/maryprofile/src/Header.css
@@ -1,6 +1,57 @@
 .header {
-  border: 1px solid lightgray;
-  background-color: black;
+  /* border: 1px solid lightgray; */
+  background-color: #1f1d21;
   color: white;
-  padding: 20px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  padding-top: 20px;
+  padding-left: 30px;
+  padding-bottom: 20px;
+  height: 23px;
+  display: flex;
+  justify-content: space-between;
+
+  /* transitions */
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
+}
+.header__logo {
+  position: absolute;
+  top: 8px;
+  bottom: 8px;
+  left: 445px;
+  width: 50px;
+  height: 50px;
+  /* object-fit: contain; */
+  /* border: 1px solid white; */
+  cursor: pointer;
+  border-radius: 70%;
+}
+.header__links {
+  /* justify-content: space-between; */
+  display: flex;
+  position: absolute;
+  left: 500px;
+}
+
+.header__link {
+  /* text-decoration: none;
+  color: white; */
+  padding: 10px;
+  border: none;
+  background-color: transparent;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  font-size: medium;
+}
+.header__link:hover {
+  color: gray;
+  transition: all 0.2s;
+}
+
+.header__black {
+  background-color: #111;
 }
