--- a/maryprofile/src/Home.css
+++ b/maryprofile/src/Home.css
@@ -16,13 +16,26 @@
   background-size: cover;
   position: relative;
   /* top: 5px; */
+  /* display: flex; */
 }
+/* .home__pic {
+  position: relative;
+  left: 20%;
+  object-fit: contain;
+  /* max-width: 100%;
+  max-height: 100%; */
+/* border-radius: 50%; */
+/* padding-left: 100px; */
+/* } */
 
 .home__text {
-  /* padding: 100px; */
+  padding: 100px;
   text-align: center;
+  /* position: relative; */
   position: absolute;
-  top: 50%;
+  top: 40%;
+  /* padding-left: 600px; */
+  /* left: 110%; */
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
