--- a/maryprofile/src/Header.css
+++ b/maryprofile/src/Header.css
@@ -1,15 +1,16 @@
 .header {
-  /* border: 1px solid lightgray; */
-  background-color: #1f1d21;
-  color: white;
   position: fixed;
-  z-index: 1;
+  z-index: 1.2;
   top: 0;
+  border-bottom: 1px solid lightgray;
+  /* background-color: #1f1d21; */
+  /* color: white; */
+
   width: 100%;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 30px;
-  padding-bottom: 20px;
-  height: 23px;
+  padding-bottom: 10px;
+  height: 50px;
   display: flex;
   justify-content: space-between;
 
@@ -17,14 +18,18 @@
   transition-timing-function: ease-in;
   transition: all 0.5s;
 }
+
+.header__black {
+  background-color: #111;
+}
 .header__logo {
-  position: absolute;
-  top: 8px;
+  /* position: absolute; */
+  top: 1px;
   bottom: 10px;
-  left: 450px;
+  left: -50px;
   width: 50px;
   height: 50px;
-  /* object-fit: contain; */
+  object-fit: contain;
   /* border: 1px solid white; */
   cursor: pointer;
   border-radius: 70%;
@@ -48,7 +53,7 @@
   font-size: medium;
 }
 .header__link:hover {
-  color: gray;
+  color: #ddd9e0;
   transition: all 0.2s;
 }
 
