--- a/maryprofile/src/Row.css
+++ b/maryprofile/src/Row.css
@@ -7,20 +7,23 @@
   margin: 10px;
   padding: 20px;
   width: 100%;
-  background-color: white;
+  background-color: #141414;
   z-index: 1;
   align-items: center;
   /* justify-content: flex-end; */
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
+  color: white;
 }
 .row > img {
   width: 100%;
   object-fit: contain;
   max-height: 200px;
   margin-bottom: 10px;
+  padding: 10px;
 }
 .row__contents {
   display: flex;
+
   /* align-items: center; */
   /* justify-content: space-between; */
 }
@@ -34,7 +37,9 @@
   /* right: 20px; */
   /* left: 40px; */
   /* text-decoration: none; */
+  color: white;
 }
 .row__icon {
   padding-left: 50px;
+  color: white;
 }
