--- a/maryprofile/src/Header.css
+++ b/maryprofile/src/Header.css
@@ -1,9 +1,9 @@
 .header {
   position: fixed;
-  z-index: 1.2;
+  z-index: 1;
   top: 0;
   border-bottom: 1px solid lightgray;
-  /* background-color: #1f1d21; */
+  background-color: #1f1d21;
   /* color: white; */
 
   width: 100%;
@@ -51,6 +51,7 @@
   outline: none;
   cursor: pointer;
   font-size: medium;
+  font-weight: 600;
 }
 .header__link:hover {
   color: #ddd9e0;
