image click added

--- a/maryprofile/src/Project.css
+++ b/maryprofile/src/Project.css
@@ -39,74 +39,113 @@
   padding-left: 50px;
   padding-right: 50px;
   justify-content: center; */
-  padding-top: 70px;
+  margin-top: 70px;
+  margin-bottom: 60px;
   /* background-color: white; */
   /* color: aliceblue; */
   /* justify-content: center; */
-  border: 4px solid red;
+  /* border: 4px solid red; */
+  margin-left: 120px;
+  margin-right: 50px;
 }
 .project__title {
-  justify-content: center;
+  /* justify-content: center; */
   display: flex;
-  padding: 5px;
+  padding: 7px;
+  margin-left: 60px;
   /* padding-left: 500px;
     padding-top: 20px;
     padding-bottom: 20px; */
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 .project__carousel {
-  border: 3px solid black;
+  /* border: 3px solid black; */
   display: flex;
-  padding: 10px;
+  padding: 5px;
 }
+
 .home__image {
-  width: 70%;
+  width: 90%;
   object-fit: contain;
+  border-radius: 30px;
   /* z-index: 1; */
   /* margin-bottom: -200px; */
-  border: 5px solid lightgray;
+  /* border: 5px solid lightgray; */
   /* mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 5), rgba(0, 0, 0, 0)); */
-  height: 350px;
+  /* height: 350px; */
+  /* padding-right: 30px; */
   /* padding-top: 80px;
   padding-bottom: 80px; */
   /* padding: 80px; */
   /* justify-content: center; */
-  /* margin-left: 10px; */
-  padding: 5px;
-  /* margin-right: 40px; */
+  margin-left: 40px;
+  /* margin-right: 10px; */
+  /* padding: 5px; */
+  margin-right: -500px;
 }
 /* TODO: REMOVE THIS */
 
 .project__info {
   /* display: flex; */
-  /* justify-content: center; */
+  /* justify-content: space-evenly; */
   /* position: relative; */
   /* top: 10px; */
   /* bottom: -500px; */
-  border: 1px solid palevioletred;
-  padding: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  /* border: 1px solid palevioletred; */
+  padding: 10px;
+  /* margin-left: -200px; */
+  /* margin-right: auto; */
 }
 .project__infoTitle {
   /* display: flex; */
   /* justify-content: center; */
-  border: 1px solid lightblue;
-  padding: 20px;
+  /* border: 1px solid lightblue; */
+  padding-top: 20px;
 }
 .project__text {
-  border: 1px solid green;
-  padding: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  /* border: 1px solid green; */
+  padding-top: 10px;
+  padding-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .project__links {
-  border: 1px solid cyan;
-  padding: 20px;
+  /* border: 1px solid cyan; */
+  padding: 5px;
   display: flex;
+  /* flex-direction: column; */
+  margin-top: 30px;
   /* justify-content: center; */
+  /* margin-left: auto;
+  margin-right: auto; */
 }
-.project__link {
+/* .project__button { */
+/* text-decoration: none; */
+/* border: 3px solid yellow;
+  padding: 30px;
+} */
+.project__links {
+  margin-top: 50px;
+  /* border: 1px solid yellow; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  justify-content: center;
+}
+.project__links > button {
+  /* text-decoration: none; */
+  /* border: 3px solid yellow; */
+  /* margin: 5px; */
+  /* margin-right: 10px; */
+  /* color: white;
   text-decoration: none;
-  border: 1px solid yellow;
+  cursor: pointer;
+  background-color: blue;
+  outline: none;
+  text-align: center; */
+  /* margin: 10px; */
+}
+.project__button {
+  /* margin: 10px; */
+  height: 40px;
+  color: blue;
 }
