--- a/maryprofile/src/Resume.css
+++ b/maryprofile/src/Resume.css
@@ -15,7 +15,7 @@
   margin: 0 auto;
   padding: 20px;
   overflow: hidden;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 /* Work Experience | Technical Expertise
 ------------------------------------*/
@@ -35,7 +35,7 @@
   font-family: "Caveat", cursive;
   font-weight: 250;
   margin-bottom: 5px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 /* .content-wrap > h1 {
   font-size: 80px;
