--- a/maryprofile/src/Project.css
+++ b/maryprofile/src/Project.css
@@ -108,6 +108,7 @@
   padding-left: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
+  font-weight: 550;
 }
 .project__links {
   /* border: 1px solid cyan; */
@@ -146,6 +147,6 @@
 }
 .project__button {
   /* margin: 10px; */
-  height: 40px;
+  height: 30px;
   color: blue;
 }
